--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,6 +1,6 @@
-<h2>My Bookings</h2>
+<h2>My Booking - ver um único booking</h2>
 <div class="card-pet">
-  <img src="<%= cl_image_path @pet.photo.key, height: 300, crop: :fill %>" />
+  <%# <img src="<%= cl_image_path @pet.photo.key, height: 300, crop: :fill %>
   <div class="card-trip-infos">
     <div>
       <h2>Pet name</h2>
