--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,1 +1,20 @@
-<h1>bookings</h1>
+<h1>This Booking</h1>
+  <p>start date & end date</p>
+<body>
+  <form>
+    <br>
+    <br>
+    Start Date: <input type = "date"><button type="submit" name="btn">Submit</button>
+  </form>
+  <form>
+    <br>
+    <br>
+    End Date: <input type = "date"><button type="submit" name="btn">Submit</button>
+  </form>
+  <br>
+  <br>
+<p>inserir botão: Confirm Booking</p>
+<%= link_to "Back to pet", pet_path(@pet)%>
+<%= link_to "Search other pet", pets_path%>
+
+</body>
